<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_triggers"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/text_triggers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alternative"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/text_alternative"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
</menu>